--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -24,7 +24,7 @@
   footer{
     align-self: stretch;
 
-    &.empty{
+    &.empty .progress{
       opacity: 0.5;
     }
   }
@@ -71,7 +71,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  font-size: 0.075rem;
+  font-size: 0.75rem;
 
   span{
     display: inline-block;
@@ -107,6 +107,15 @@
 
     &:disabled{
       cursor: not-allowed;
+      opacity: 0.5;
+    }
+
+    &.isActive{
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+    }
+
+    &.isActive:hover{
+      filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
     }
 
     &:hover:not(:disabled){
